--- a/en/courses/index.html
+++ b/en/courses/index.html
@@ -37,11 +37,7 @@
         <li class="divider">&bull;</li>
         <li><a href="/en/about">about</a></li>
         <li class="divider">&bull;</li>
-        <li><a href="/en/courses">courses</a></li>
-        <li class="divider">&bull;</li>
-        <li><a href="/en/posters">posters</a></li>
-        <li class="divider">&bull;</li>
-        <li><a href="/en/slides">slides</a></li>
+        
 <!--        <li class="divider">&bull;</li>-->
 <!--        <li><a href="/feed.xml" target="_blank"><i class="icon icon-feed"></i> feed</a></li>-->
       </ul>
@@ -62,7 +58,7 @@
 <!--    <h1 class=".typed_text">Hi, I'm Kenji Tanaka</h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">Research interests:</b> <br/>Artificial Intelligence, Machine Learning, Depp Learning, Computer Vision, Pattern Recognition, Signal processing, Remote Sensing, Ground Penetrating Radar (GPR), Data Science& High-Performance Computing (HPC), Python, C++
+      <b style="font-weight: bold;">TEst:</b> <br/>Test
     </smal>
     <br/>
     <br/>
