--- a/es/courses/index.html
+++ b/es/courses/index.html
@@ -36,13 +36,7 @@
       <ul>
         <li><a href="/es">inicio</a></li>
         <li class="divider">&bull;</li>
-        <li><a href="/es/about">acerca</a></li>
-        <li class="divider">&bull;</li>
-        <li><a href="/es/courses">cursos</a></li>
-        <li class="divider">&bull;</li>
-        <li><a href="/es/posters">posters</a></li>
-        <li class="divider">&bull;</li>
-        <li><a href="/es/slides">presentaciones</a></li>
+        
 <!--        <li class="divider">&bull;</li>-->
 <!--        <li><a href="/feed.xml" target="_blank"><i class="icon icon-feed"></i> feed</a></li>-->
       </ul>
@@ -63,7 +57,7 @@
 <!--    <h1 class=".typed_text">Hola, Soy Kenji Tanaka</h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">Areas de interes:</b> <br/>Artificial Intelligence, Machine Learning, Depp Learning, Computer Vision, Pattern Recognition, Signal processing, Remote Sensing, Ground Penetrating Radar (GPR), Data Science& High-Performance Computing (HPC), Python, C++
+      <b style="font-weight: bold;">Test:</b> <br/>TEst
     </smal>
     <br/>
     <br/>
