--- a/es/index.html
+++ b/es/index.html
@@ -59,7 +59,7 @@
 <!--    <h1 class=".typed_text">Hola, Kenji Tanaka</h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">Areas de interes:</b> <br/>Artificial Intelligence, Machine Learning, Depp Learning, Computer Vision, Pattern Recognition, Signal processing, Remote Sensing, Ground Penetrating Radar (GPR), Data Science& High-Performance Computing (HPC), Python, C++
+      <b style="font-weight: bold;">TEst:</b> <br/>TEst
     </smal>
     <br/>
     <br/>
