--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--    <h1 class=".typed_text">Hi, I'm Kenji Tanaka</h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">Research interests:</b> <br/>Artificial Intelligence, Machine Learning, Depp Learning, Computer Vision, Pattern Recognition, Signal processing, Remote Sensing, Ground Penetrating Radar (GPR), Data Science& High-Performance Computing (HPC), Python, C++
+      <b style="font-weight: bold;">Test:</b> <br/>Test
     </smal>
     <br/>
     <br/>
