--- a/es/index.html
+++ b/es/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Blog | Kenji Blog</title>
+<title>Kenji</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link rel="stylesheet" href="/css/main.css">
