--- a/en/index.html
+++ b/en/index.html
@@ -58,7 +58,7 @@
 <!--    <h1 class=".typed_text">Hi, I'm Kenji Tanaka/h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">test interests:</b> <br/>test
+      <b style="font-weight: bold;"> </b> <br/>
     </smal>
     <br/>
     <br/>
