--- a/es/courses/index.html
+++ b/es/courses/index.html
@@ -57,7 +57,7 @@
 <!--    <h1 class=".typed_text">Hola, Soy Kenji Tanaka</h1>-->
     <span class="typed_text"></span><br>
     <smal style="text-align: center; font-size: medium">
-      <b style="font-weight: bold;">Test:</b> <br/>TEst
+      <b style="font-weight: bold;"></b> <br/>
     </smal>
     <br/>
     <br/>
