--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
 <title>Kenji Tanaka</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
-<link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/zoomtimeline.css" >
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/zoomtimeline.css" >
 <!--foots-->
 <link rel="stylesheet" href="/css/littlefoot.css" >
 <!--highlight-->
