--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <title>Kenji Tanaka</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
-<link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/zoomtimeline.css" >
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/zoomtimeline.css" >
 <!--foots-->
-<link rel="stylesheet" href="/css/littlefoot.css" >
+<link rel="stylesheet" href="css/littlefoot.css" >
 <!--highlight-->
-<link rel="stylesheet"  href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/xcode.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/xcode.min.css">
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -35,23 +35,17 @@
   <div class="container txt-center">
     <nav class="navbar">
       <ul>
-        <li><a href="/en">home</a></li>
-        <li class="divider">&bull;</li>
+        <li class="divider"></li>
 <!--        <li class="divider">&bull;</li>-->
 <!--        <li><a href="/feed.xml" target="_blank"><i class="icon icon-feed"></i> feed</a></li>-->
       </ul>
     </nav>
-    <a href="/en" class="author-thumb">
-      <img src="/img/author2.jpg" alt="Author thumbnail" class="dot">
+    <a href="#" class="author-thumb">
+      <img src="img/img1.png" alt="Author thumbnail" class="dot">
     </a>
     <div style="display: flex; justify-content: center; margin: 20px">
       <div class="row">
-          <div class="column">
-            <a href="/en/" ><img  src="https://www.countryflags.io/us/flat/32.png" alt="English" /></a>
-          </div>
-          <div class="column">
-            <a href="/es/" ><img  src="https://www.countryflags.io/es/flat/32.png" alt="Español" /></a>
-          </div>
+          
       </div>
     </div>
 <!--    <h1 class=".typed_text">Hi, I'm Kenji Tanaka</h1>-->
@@ -69,7 +63,7 @@
   </div>
 </header>
             <section class="main-content">
-
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5ecd08ff-3c1a-470a-a239-593a1b878dcf" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="http://cdn.credly.com/assets/utilities/embed.js"></script>
             </section>
 <div class="clearfix"></div>
 <footer class="site-footer txt-center">
@@ -92,25 +86,25 @@
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 <!--foots-->
-<script type="text/javascript" src="/js/littlefoot.js"></script>
+<script type="text/javascript" src="js/littlefoot.js"></script>
 <!--highlight-->
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.7.0/highlightjs-line-numbers.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.7.0/highlightjs-line-numbers.min.js"></script>
 <!--timeline-->
-<script src="/js/zoomtimeline.js"></script>
+<script src="js/zoomtimeline.js"></script>
 <!--typed.js-->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 <!--Background-->
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
-<script src="/js/background.js"></script>
+<script src="js/background.js"></script>
 <!--latex-->
 <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <!--citations-->
-<script type="text/javascript" src="/js/citation-0.4.0-9.min.js"></script>
+<script type="text/javascript" src="js/citation-0.4.0-9.min.js"></script>
 <!--main script-->
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
     </main>
     <a href="https://github.com/kenjitm" target="_blank" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#2ecc71; color:#f7f8f9; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
   </body>
