--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 </header>
             <section class="main-content">
-              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5ecd08ff-3c1a-470a-a239-593a1b878dcf" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="http://cdn.credly.com/assets/utilities/embed.js"></script>
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5ecd08ff-3c1a-470a-a239-593a1b878dcf" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
             </section>
 <div class="clearfix"></div>
 <footer class="site-footer txt-center">
