--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
     <main class="container">
         <header class="site-header">
   <div class="container txt-center">
-    <nav class="navbar">
-      <ul>
-        <li class="divider"></li>
-<!--        <li class="divider">&bull;</li>-->
-<!--        <li><a href="/feed.xml" target="_blank"><i class="icon icon-feed"></i> feed</a></li>-->
-      </ul>
+    <nav class="navbar">      
     </nav>
     <a href="#" class="author-thumb">
       <img src="img/img1.png" alt="Author thumbnail" class="dot">
@@ -67,6 +62,7 @@
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4628f45c-f353-47ac-94f3-5c292654b127" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="18c2760b-1af4-4eda-a9e5-485a1a5f917e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0d982239-6960-4bf8-8dd9-f6027ff3733a" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+   <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="67040b8f-4bb0-49ce-99f4-fc548723ae7f" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
   </section>
 
 <div class="clearfix"></div>
