:sparkles: feat: Update Credly badgets

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="18c2760b-1af4-4eda-a9e5-485a1a5f917e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0d982239-6960-4bf8-8dd9-f6027ff3733a" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="67040b8f-4bb0-49ce-99f4-fc548723ae7f" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+   <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0244fbeb-3a02-4683-90e3-9c7b86693bff" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
+   <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bf4a3301-0135-4137-945b-a35c356fb749" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
   </section>
 
 <div class="clearfix"></div>
